--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ text-align: center;
   border: 1px solid white;
   padding: 5px;
   border-radius: 5px;
-  margin: 5px 5px;
+  margin: 5px 15px;
   display: flex;
 
 
@@ -59,14 +59,15 @@ text-align: center;
 .Link{
   color: white;
   position: absolute;
-
+  opacity: 0;
   width: 110px;
   height: 140px;
-  z-index: 999;
+
   opacity: 0;
   cursor: pointer;
   display: flex;
   justify-content: center;
+ z-index: 999;
 }
 
 .Link p{
@@ -77,6 +78,7 @@ text-align: center;
 .Link:hover{
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.575);
+
 
  
   
