--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,11 @@ text-align: center;
 .gif{
   width: 110px;
   height: 140px;
-  border: 1px solid white;
+
   padding: 5px;
   border-radius: 5px;
   margin: 5px 15px;
   display: flex;
-
-
 
 }
 
@@ -51,6 +49,7 @@ text-align: center;
   height: 100%;
   width: 90%;
   z-index: 998;
+  border-radius: 5px;
  
 }
 
@@ -62,7 +61,6 @@ text-align: center;
   opacity: 0;
   width: 110px;
   height: 140px;
-
   opacity: 0;
   cursor: pointer;
   display: flex;
